--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # API Configuration
 # Backend API base URL for weather risk assessment
-VITE_API_BASE_URL=http://localhost:8000
+VITE_API_BASE_URL=
